Add fix for map in profile and textarea in project

--- a/src/VladChange/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,5 +1,23 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends 'VladChangeMainBundle:Default:page.html.twig' %}
 
-{% block fos_user_content %}
-{% include "FOSUserBundle:ChangePassword:changePassword_content.html.twig" %}
-{% endblock fos_user_content %}
+{% trans_default_domain 'FOSUserBundle' %}
+
+{% block links %}
+   {{ parent() }}
+   <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/edit_profile.css') }}" />
+   <link rel="stylesheet" href="{{ asset('bundles/vladchangemain/css/forms.css') }}" />
+   <script src="{{ asset('bundles/vladchangemain/js/forms.js') }}"></script>
+{% endblock %}
+
+{% block div_main %}
+   <div id="main_wrap">
+      <h1 class="from_top">Изменение пароля</h1><div class="block_form">
+         <form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
+            {{ form_widget(form) }}
+            <div class="buttons">
+               <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+            </div>
+         </form>
+      </div>
+   </div>
+{% endblock %}
