--- a/src/VladChange/MainBundle/Resources/public/css/profile.css
+++ b/src/VladChange/MainBundle/Resources/public/css/profile.css
@@ -1,3 +1,11 @@
+#wrap {
+   width: 100%;
+   height: 100%;
+   margin-top: -85px;
+   position: absolute;
+   overflow: hidden;
+}
+
 #user_left {
    background: #2D2D2D;
    width: 280px;
