--- a/src/VladChange/MainBundle/Resources/views/Default/header.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Default/header.html.twig
@@ -4,7 +4,7 @@
     </div>
     <nav>
         <ul>
-           <li><a href="#">Ссылка 1</a></li>
+           <li><a href="{{ path('vlad_change_main_list') }}">Списки</a></li>
            <li><a href="#">Ссылка 2</a></li>
            <li><a href="#">Ссылка 3</a></li>
         </ul>
@@ -12,7 +12,7 @@
     <ul class="right">
      {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
         <li>
-            <a href="{{ path('fos_user_profile_show') }}">{{ app.user.name }} {{ app.user.surname }}</a>
+            <a href="{{ path('fos_user_profile_show') }}" data="profile">{{ app.user.name }} {{ app.user.surname }}</a>
         </li>
      {% else %}
         <li><a href="{{ path('fos_user_registration_register') }}">Регистрация</a></li>
