Add comment block

--- a/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
@@ -61,6 +61,14 @@
                      <div class="likes">1 458</div>
                   </div>
                </div>
+               <div class="comments">
+                  <div id="add_comment_block">
+                     <textarea id="comment_text" name="text"></textarea>
+                     <button id="add_comment">Добавить</button>
+                  </div>
+                  <div class="comment_block">
+                  </div>
+               </div>
             </div>
          </div>
       </article>
