--- a/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/index.html.twig
@@ -58,7 +58,7 @@
                      <time>17.10.2014</time>
                   </div>
                   <div class="right">
-                     <div class="likes">1 458</div>
+                     <button class="likes"></button>
                   </div>
                </div>
             </div>
