--- a/src/VladChange/MainBundle/Resources/public/css/map_index.css
+++ b/src/VladChange/MainBundle/Resources/public/css/map_index.css
@@ -161,3 +161,63 @@
    z-index: 999;
    text-align: center;
 }
+
+#add_comment_block {
+   margin: 50px 0 25px;
+}
+
+#full_info .content #add_comment_block h1 {
+   font-size: 150%;
+   margin-bottom: 15px;
+}
+
+#add_comment_block textarea {
+   width: 80%;
+   padding: 5px;
+   resize: none;
+   height: 100px;
+}
+
+#add_comment {
+   padding: 8px 5px;
+   background: #2d2d2d;
+   border: 0;
+   color: white;
+   cursor: pointer;
+   width: 200px;
+   margin: 15px 0 0 0;
+   display: block;
+   height: 30px;
+}
+
+div.comment_block {
+   margin-left: 230px;
+   margin-top: -50px;
+}
+
+div.comment_block div.left a.avatar {
+   display: block;
+   float: left;
+}
+
+div.comment_block div.right {
+   margin-left: 50px;
+}
+
+div.comment_block div.right a.author {
+   color: #1e9db5;
+   display: block;
+   font-style: italic;
+   padding: 0 0 5px;
+   font-size: 110%;
+}
+
+div.comment_block div.right time {
+   color: #434343;
+   font-style: italic;
+   font-size: 80%;
+}
+
+div.comment_block ul li {
+   margin-bottom: 30px;
+}
