--- a/src/VladChange/MainBundle/Resources/views/Pages/add_project.html.twig
+++ b/src/VladChange/MainBundle/Resources/views/Pages/add_project.html.twig
@@ -22,8 +22,8 @@
          </div>
       {% else %}
          <div class="message">
-            <p>Вы исчерпали лимит доступных проектов. Очень жаль:( </p>
-            <p>Можете купить место для дополнительного проекта.</p>
+            <p>Вы исчерпали лимит доступных проектов.</p>
+            <p>Для создания последующих проектов требуется оплата.</p>
          </div>
       {% endif %}
    </div>
