--- a/src/VladChange/UserBundle/Resources/views/Profile/profile.html.twig
+++ b/src/VladChange/UserBundle/Resources/views/Profile/profile.html.twig
@@ -20,7 +20,11 @@
       <div id="map"></div>
       <div id="user_left">
          <div class="user_info">
+            {% if user.getImage() is empty %}
             <div class="avatar"><img src="{{ asset('bundles/vladchangemain/images/avatar.jpg') }}" /></div>
+            {% else %}
+            <div class="avatar"><img src="{{ path('vlad_change_get_image', {'id': user.getImage().getId(), 'param':'s'}) }}" /></div>
+            {% endif %}
             <div class="right_info">
                <div class="str"><span>Имя:</span> {{ user.getName() }}</div>
                <div class="str"><span>Фамилия:</span> {{ user.getSurname() }}</div>
